--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,14 @@
             "settings": {},
             "extensions": [
 		// python is kept as an example. Use the VSCode marketplace to determine the extension identifier
-                //"ms-python.python",
+                "ms-python.python",
+                "ms-python.autopep8",
+                "ms-toolsai.jupyter",
+                "ms-toolsai.vscode-jupyter-cell-tags",
+                "ms-toolsai.jupyter-renderers",
+                "ms-toolsai.vscode-jupyter-slideshow",
+                "ms-python.vscode-pylance",
+                "ms-toolsai.jupyter-keymap"
             ]
         }
     },
